# rps-computing

./: .gitignore  README.md  main.py  pyproject.toml
src/algorithms/clustering_algorithm/: cluster_refiner.py  clustering_algorithm.py  duration_limited_clusterer.py  size_limited_clusterer.py
src/algorithms/data_preprocessor/: preprocess_data.py
src/algorithms/result_optimizer/: result_optimizer.py
src/algorithms/result_visualizer/: result_visualizer.py
src/algorithms/result_visualizer/modules/: draw_map.py
src/algorithms/result_visualizer/utils/: draw_map.py
src/data/: data_loader.py
src/services/direct_router/: cache_manager.py  direct_router.py  direct_router_executor.py  direct_router_rpc_client.py  direct_router_rpc_server.py  direct_router_worker.py  worker.py
src/services/geo_indexer/: geo_indexer.py
src/services/multi_stop_router/: multi_stop_router.py  multi_stop_router_executor.py  multi_stop_router_rpc_client.py  multi_stop_router_rpc_server.py  multi_stop_worker.py
src/services/rpc_manager/: rpc_client.py  rpc_manager.py  rpc_server.py
src/utils/: utils.py
