[project]
name = "distribution-planning"
version = "0.1.0"
description = ""
authors = [
    { name = "nickham", email = "50793247@qq.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "haversine (>=2.9.0,<3.0.0)",
    "notebook (>=7.4.1,<8.0.0)",
    "folium (>=0.19.5,<0.20.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "rwlock (>=0.0.7,<0.0.8)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "rtree (>=1.4.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "supplemental"